# perfmode

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix
src/: main.rs
